objects/Employee_Education__c.object
<CustomObject>
    <label>Employee Education</label>
    <nameField>
        <displayFormat>Edu-Id-{0000}</displayFormat>
        <label>Employee Education ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Educations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>K_Employee__c</referenceTo>
        <relationshipLabel>Employee Educations</relationshipLabel>
        <relationshipName>Employee_Educations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Senior Secondary</fullName>
                </value>
                <value>
                    <fullName>Graduation</fullName>
                </value>
                <value>
                    <fullName>Post Graduation</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <label>School/College</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subjects_Degree__c</fullName>
        <label>Subjects/ Degree</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_Completion__c</fullName>
        <label>Year of Completion</label>
        <type>Date</type>
    </fields>
</CustomObject>